style/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* General Styles */

* {
    border: 1px grey solid;
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    max-width:100%;
}

html {
    font-size: 62.5%; 
}

/*1rem === 10px - and it gives the user control*/

body {
    font-family: 'Roboto Slab', serif;
    font-size: 1.6rem;
    line-height: 1.5;
    color: #4f4f4f;
    background-image: url("/Assets/bg.jpg");
    height: 45vh;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Oswald', sans-serif;
    letter-spacing: 7px;
    text-transform: uppercase;
}

a {
    color:whitesmoke;
    text-decoration: none;
    letter-spacing: 4px;
    font-family: 'Oswald', sans-serif;
}

section {
    padding: 4% 0;
    margin: 0 auto;
}

header {
    height: 20vh;
    color: whitesmoke;
    margin-top: 1%;
}

.name {
    width: 100%;
    display:flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}

h1 {
    width: 40%;
    background-color: rgba(0, 0, 0, 0.7);
    text-align: center;
    font-size: 7rem;
    
    padding: 2% 0;
    border-radius: 10px;
}

nav {
    margin-bottom: 4%;
    display: flex;
    justify-content: center;
}

nav a {
    padding: .7rem 2rem;
    background-color: rgba(0, 0, 0, 0.7);
    margin: 1rem;
    border-radius: 10px;
    width: 7%;
    text-align: center;
    text-transform: lowercase;
}

.about {
    border: 1px solid green;
    margin-top: 8%;
    color: whitesmoke;
    background-color: rgba(0, 0, 0, 0.7);
    border-radius: 10px;
    width: 75%;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-content: start;
}

.about h2 {
    font-size: 2.7rem;
    width: 30%;
    text-align: center;
    padding-bottom: 1%;
}

.about p {
    width:80%;
    text-align: center;
}

